--- a/thanks.html
+++ b/thanks.html
@@ -94,6 +94,10 @@
 			border-radius: 0 0 1.4em 1.4em;
 		}
 	}
+
+	.wf-tficons-n7-active #thanks-message p:first-child::before {
+		content: none !important;
+	}
 </style>
 <section id="thanks" class="section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
