remove bold setting in the thanks page

--- a/thanks.html
+++ b/thanks.html
@@ -95,9 +95,21 @@
 		}
 	}
 
+	/**
+	TODO: REMOVE this section once the sync between buddy and AWS is solved
+	**/
 	.wf-tficons-n7-active #thanks-message p:first-child::before {
 		content: none !important;
 	}
+
+	#thanks-message p:first-child{
+		font-weight: 'inherit'
+	};
+	/**
+	TODO: REMOVE this section once the sync between buddy and AWS is solved
+	**/
+
+
 </style>
 <section id="thanks" class="section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
