remove bold setting in the thanks page

--- a/thanks.html
+++ b/thanks.html
@@ -103,7 +103,7 @@
 	}
 
 	#thanks-message p:first-child{
-		font-weight: 'inherit'
+		font-weight: inherit
 	};
 	/**
 	TODO: REMOVE this section once the sync between buddy and AWS is solved
