Update Japanese address fields

--- a/japanese_region_select.html
+++ b/japanese_region_select.html
@@ -1,4 +1,4 @@
-<select name="city" id="id_city" class="ak-userfield-input">
+<select name="region" id="id_region" class="ak-userfield-input">
     <option value="北海道">北海道</option>
     <option value="青森">青森</option>
     <option value="岩手">岩手</option>
