--- a/japanese_address_fields.html
+++ b/japanese_address_fields.html
@@ -9,12 +9,10 @@
     <input id="id_postal" type="text" name="postal" size="10">
   </div>
 {% endif %}
-{% if page.allow_international %}
-  <div class="ak-intl-billing-fields input-text ak-input-type-user input-field-group ak-err-below">
-    <label for="id_region">{% filter ak_text:"field_region" %}Region{% endfilter %}</label>
-    <input id="id_region" type="text" name="region" size="20">
-  </div>
-{% endif %}
+<div class="input-select ak-input-type-user input-field-group ak-err-below">
+  <label for="id_region">{% filter ak_text:"field_region" %}Region{% endfilter %}</label>
+  {% include "./japanese_region_select.html" %}
+</div>
 {% if has_shippable_products %}
   <div class="input-text ak-input-type-user input-field-group ak-err-below">
     <label for="id_address1">Billing address line 1</label>
@@ -25,13 +23,18 @@
     <input id="id_address2" class="" type="text" name="address2">
   </div>
 {% else %}
-  <div class="input-select ak-input-type-user input-field-group ak-err-below">
+  <div class="input-text ak-input-type-user input-field-group ak-err-below">
     <label for="id_city">{% filter ak_text:"field_city" %}City{% endfilter %}</label>
-    {% include "./japanese_city_select.html" %}
+    <input id="id_city" class="" type="text" name="city">
   </div>
   <div class="input-text ak-input-type-user input-field-group ak-err-below">
-    <label for="id_address1">{% filter ak_text:"field_billing_address" %}Billing
+    <label for="id_address1">{% filter ak_text:"field_street_address" %}Street
       address{% endfilter %}</label>
     <input id="id_address1" class="" type="text" name="address1">
+  </div>
+  <div class="input-text ak-input-type-user input-field-group ak-err-below">
+    <label for="id_address2">{% filter ak_text:"field_billing_address" %}Billing
+      address{% endfilter %}</label>
+    <input id="id_address2" class="" type="text" name="address2">
   </div>
 {% endif %}
