Add undefined check for Google Analytics library

--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -396,8 +396,11 @@ jQuery(document).ready(function($){
 						data: $('#action-form').serialize()
 					})
 					.done(function(msg) {
-						// send google analytics event
-						ga('send', 'event', 'scrolling-signup', 'signup', window.location.pathname);
+						// handle adblockers preventing the loading of Google Analytics library
+						if (typeof ga !== 'undefined') {
+							// send google analytics event
+							ga('send', 'event', 'scrolling-signup', 'signup', window.location.pathname);
+						}
 						// send FB tracker event
 						if (typeof fbq === "function") {
 							fbq('track', 'CompleteRegistration');
@@ -415,10 +418,16 @@ jQuery(document).ready(function($){
 						// if user opts to share, show share dialog
 						$('.afteraction-share-ask-yes').on('click', function(){
 							afteractionShowShare();
-							ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-yes', window.location.pathname);
+							// handle adblockers preventing the loading of Google Analytics library
+							if (typeof ga !== 'undefined') {
+								ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-yes', window.location.pathname);
+							}
 						});
 						$('.afteraction-share-ask-no').on('click', function(){
-							ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-no', window.location.pathname);
+							// handle adblockers preventing the loading of Google Analytics library
+							if (typeof ga !== 'undefined') {
+								ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-no', window.location.pathname);
+							}
 						});
 						// if user opts not to share or has completed sharing, show donate ask
 						afteraction.on('click','.afteraction-share-ask-no, .afteraction-share-button', function(){
@@ -426,10 +435,16 @@ jQuery(document).ready(function($){
 							afteractionShowDonate(el);
 						});
 						$('.afteraction-donate-amount, .afteraction-donate-ask-yes').on('click', function(){
-							ga('send', 'event', 'scrolling-signup', 'afteraction-donate-yes', window.location.pathname);
+							// handle adblockers preventing the loading of Google Analytics library
+							if (typeof ga !== 'undefined') {
+								ga('send', 'event', 'scrolling-signup', 'afteraction-donate-yes', window.location.pathname);
+							}
 						});
 						$('.afteraction-donate-ask-no').on('click', function(){
-							ga('send', 'event', 'scrolling-signup', 'afteraction-donate-no', window.location.pathname);
+							// handle adblockers preventing the loading of Google Analytics library
+							if (typeof ga !== 'undefined') {
+								ga('send', 'event', 'scrolling-signup', 'afteraction-donate-no', window.location.pathname);
+							}
 						});
 					})
 					.fail(function(){
