--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -369,7 +369,9 @@ jQuery(document).ready(function($){
 			var winLeft = (screen.width / 2) - (popupWidth / 2);
 			window.open( destination , 'new-window-popup', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,resizable=yes,scrollbars=yes,width=' + popupWidth + ',height=' + popupHeight );
 			// send Google Analytics event
-			ga('send', 'event', 'scrolling-signup', 'share-facebook', window.location.pathname);
+			if (typeof ga !== 'undefined') {
+				ga('send', 'event', 'scrolling-signup', 'share-facebook', window.location.pathname);
+			}
 		});
 
 		/* When the main form is submitted... */
