Add unsubscribe pages in Korean and Italian; update existing links to be consistent

--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -386,28 +386,32 @@
 						<a href="/unsubscribe/unsubscribe-es">
 					{% elif page.lang.iso_code == "pt" %}
 						<a href="/unsubscribe/unsubscribe-pt">
-					{% elif page.lang.iso_code == "jp" %}
-						<a href="/unsubscribe/unsubscribe_japanese">
+					{% elif page.lang.iso_code == "ja" %}
+						<a href="/unsubscribe/unsubscribe-ja">
 					{% elif page.lang.iso_code == "tr" %}
-						<a href="/unsubscribe/unsubscribe-turkish">
+						<a href="/unsubscribe/unsubscribe-tr">
 					{% elif page.lang.iso_code == "se" %}
 						<a href="/unsubscribe/unsubscribe-sw">
 					{% elif page.lang.iso_code == "nl" %}
-						<a href="/unsubscribe/unsubscribe-du">
+						<a href="/unsubscribe/unsubscribe-nl">
 					{% elif page.lang.iso_code == "pl" %}
 						<a href="/unsubscribe/unsubscribe-pl">
 					{% elif page.lang.iso_code == "bn" %}
-						<a href="/unsubscribe/unsubscribe_bn">
+						<a href="/unsubscribe/unsubscribe-bn">
 					{% elif page.lang.iso_code == "id" %}
-						<a href="/unsubscribe/unsubscribe-bahasaindonesia">
+						<a href="/unsubscribe/unsubscribe-id">
 					{% elif page.lang.iso_code == "ua" %}
 						<a href="/unsubscribe/unsubscribe_uk">
 					{% elif page.lang.iso_code == "ar" %}
-						<a href="/unsubscribe/unsubscribe-arabic">
+						<a href="/unsubscribe/unsubscribe-ar">
 					{% elif page.lang.iso_code == "ru" %}
-						<a href="/unsubscribe/unsubscribe-russian">
+						<a href="/unsubscribe/unsubscribe-ru">
 					{% elif page.lang.iso_code == "zh" %}
-						<a href="/unsubscribe/unsubscribe-chinese">
+						<a href="/unsubscribe/unsubscribe-zh">
+					{% elif page.lang.iso_code == "ko" %}
+						<a href="/unsubscribe/unsubscribe-ko">
+					{% elif page.lang.iso_code == "it" %}
+						<a href="/unsubscribe/unsubscribe-it">
 					{% else %}
 						<a href="/unsubscribe/unsubscribe">
 					{% endif %}
