--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -369,7 +369,9 @@ jQuery(document).ready(function($){
 			var winLeft = (screen.width / 2) - (popupWidth / 2);
 			window.open( destination , 'new-window-popup', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,resizable=yes,scrollbars=yes,width=' + popupWidth + ',height=' + popupHeight );
 			// send Google Analytics event
-			ga('send', 'event', 'scrolling-signup', 'share-facebook', window.location.pathname);
+			if (typeof ga !== 'undefined') {
+				ga('send', 'event', 'scrolling-signup', 'share-facebook', window.location.pathname);
+			}
 		});
 
 		/* When the main form is submitted... */
@@ -396,8 +398,11 @@ jQuery(document).ready(function($){
 						data: $('#action-form').serialize()
 					})
 					.done(function(msg) {
-						// send google analytics event
-						ga('send', 'event', 'scrolling-signup', 'signup', window.location.pathname);
+						// handle adblockers preventing the loading of Google Analytics library
+						if (typeof ga !== 'undefined') {
+							// send google analytics event
+							ga('send', 'event', 'scrolling-signup', 'signup', window.location.pathname);
+						}
 						// send FB tracker event
 						if (typeof fbq === "function") {
 							fbq('track', 'CompleteRegistration');
@@ -415,10 +420,16 @@ jQuery(document).ready(function($){
 						// if user opts to share, show share dialog
 						$('.afteraction-share-ask-yes').on('click', function(){
 							afteractionShowShare();
-							ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-yes', window.location.pathname);
+							// handle adblockers preventing the loading of Google Analytics library
+							if (typeof ga !== 'undefined') {
+								ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-yes', window.location.pathname);
+							}
 						});
 						$('.afteraction-share-ask-no').on('click', function(){
-							ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-no', window.location.pathname);
+							// handle adblockers preventing the loading of Google Analytics library
+							if (typeof ga !== 'undefined') {
+								ga('send', 'event', 'scrolling-signup', 'afteraction-share-ask-no', window.location.pathname);
+							}
 						});
 						// if user opts not to share or has completed sharing, show donate ask
 						afteraction.on('click','.afteraction-share-ask-no, .afteraction-share-button', function(){
@@ -426,10 +437,16 @@ jQuery(document).ready(function($){
 							afteractionShowDonate(el);
 						});
 						$('.afteraction-donate-amount, .afteraction-donate-ask-yes').on('click', function(){
-							ga('send', 'event', 'scrolling-signup', 'afteraction-donate-yes', window.location.pathname);
+							// handle adblockers preventing the loading of Google Analytics library
+							if (typeof ga !== 'undefined') {
+								ga('send', 'event', 'scrolling-signup', 'afteraction-donate-yes', window.location.pathname);
+							}
 						});
 						$('.afteraction-donate-ask-no').on('click', function(){
-							ga('send', 'event', 'scrolling-signup', 'afteraction-donate-no', window.location.pathname);
+							// handle adblockers preventing the loading of Google Analytics library
+							if (typeof ga !== 'undefined') {
+								ga('send', 'event', 'scrolling-signup', 'afteraction-donate-no', window.location.pathname);
+							}
 						});
 					})
 					.fail(function(){
