--- a/wrapper.html
+++ b/wrapper.html
@@ -130,7 +130,7 @@
 	{% if page.custom_fields.fb_pic_url %}
 	<meta name="twitter:image" content="{{ page.custom_fields.fb_pic_url }}" />
 	{% endif %}
-
+	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="{{ templateset.custom_fields.site_twitter }}" />
 	<meta name="twitter:site:id" content="{{ templateset.custom_fields.site_url }}" />
 
